--- a/test/testcases/unit-test-duration.html
+++ b/test/testcases/unit-test-duration.html
@@ -61,6 +61,6 @@ test(function() {
 
 anim.specified.duration = 14.0;
 test(function() {assert_equals(anim.activeDuration,  42.0)},
-     "activeDuration incorrect");
+     "activeDuration should always reflect TimedItem.duration");
 
 </script>
