Remove cache bust for coverage, add cache bust for test files

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -190,6 +190,9 @@ function now() {
  * @return {Element} tbody containing newly created table rows.
  */
 function createTestRows(testName, testURL) {
+  // Prevent caching of the test file.
+  testURL += '?' + Date.now();
+
   var tableGroup = document.createElement('tbody');
   tableGroup.id = testName.replace('.', '-');
 
