--- a/test/testcases/unit-test-set-parent.html
+++ b/test/testcases/unit-test-set-parent.html
@@ -82,7 +82,12 @@ test(function() {assert_equals(child.startTime, 1.0)},
      "After.append, Start time of 'child'");
 
 // Test that setting TimedItem.parent is ignored.
-try { child.parent = null; } catch (error) { }
+test(function() {
+  assert_throws(new TypeError(), function() {
+    child.parent = null;
+  });
+  assert_equals(child.parent, seqGroup);
+}, "TimedItem.parent should be read-only");
 test(function() {assert_equals(seqGroup.children.length, 2)},
      "seqGroup.children.length");
 test(function() {assert_equals(seqGroup.children[0], sibling)},
