Replaced Math.random() with seeded PRNG for consistency

--- a/test/perf/balls-add-compositing.html
+++ b/test/perf/balls-add-compositing.html
@@ -47,7 +47,7 @@ var player;
 var Particle = function() {
   this.element = document.createElement('div');
   this.element.className = 'ball';
-  this.element.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+  this.element.style.backgroundColor = colors[Math.floor(Perf.random() * colors.length)];
   this.element.style.left = (stageWidth / 2 - particleRadius) + 'px';
   this.element.style.top = (stageHeight / 2 - particleRadius) + 'px';
   document.body.appendChild(this.element);
@@ -56,8 +56,8 @@ var Particle = function() {
 Particle.prototype.generateAnimation = function(duration) {
   var keyframes = [];
 
-  var angle = Math.PI * 2 * Math.random();
-  var velocity = minVelocity + ((maxVelocity - minVelocity) * Math.random());
+  var angle = Math.PI * 2 * Perf.random();
+  var velocity = minVelocity + ((maxVelocity - minVelocity) * Perf.random());
   var x = 0;
   var y = 0;
   var dx = Math.cos(angle) * velocity;
