Bunch of things which seem to have been fixed under IE while nobody was looking.

--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -61,7 +61,7 @@ limitations under the License.
 
 <script>
 var expected_failures = {
-  '/Auto generated tests at t=((?!(0.4|2))[0-9.]+)s/': {
+  '/Auto generated tests at t=((?!(0.4|0.8|1.20+1|1.6|2))[0-9.]+)s/': {
     msie: true,
     message: "Getting weird numbers."
   }
