Fixing expected failures for Firefox.

--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -88,7 +88,11 @@ var expected_failures = {
     msie: true,
     message: "Doesn't quite follow path correctly."
   },
-  '/#anim3 at t=(0|1|2|7|8|10|11)s/': {
+  '/#anim2 at t=(0|1|2|7|8|10|11)s/': {
+    firefox: true,
+    message: "Doesn't quite follow path correctly."
+  },
+  '/#anim3 at t=(0|7|8|10)s/': {
     firefox: true,
     message: "Doesn't quite follow path correctly."
   },
