--- a/demos/index.html
+++ b/demos/index.html
@@ -17,15 +17,161 @@ limitations under the License.
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link
+      href='http://fonts.googleapis.com/css?family=Roboto:900italic,400,100'
+      rel='stylesheet' type='text/css'>
+    <link href='cloud.css' rel='stylesheet' type='text/css'>
+    <style>
+      h1, body, ul {
+        margin: 0;
+        padding: 0;
+      }
+      h2 {
+        position: relative;
+        font-size: 30px;
+        z-index: 2;
+      }
+      h1 {
+        position: relative;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        font-style: italic;
+        -webkit-text-fill-color: white;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+        padding-top: .1em;
+        font-size: 50px;
+        z-index: 2;
+      }
+      ul {
+        list-style-type: none;
+        text-align: center;
+        width: 80vw;
+        margin: 0 auto;
+      }
+      li {
+        display: inline-block;
+        margin: 20px; 
+        text-align: center;
+        padding: 10px;
+        background-color: rgb(205,38,38);
+        width: 200px;
+        height: 200px;
+        box-shadow: 2px 2px 2px #999;
+        border-radius: 5px;
+      }
+      .demo-link {
+        font-size: 30px;
+        color: white;
+      }
+      li:hover {
+        background-color: rgb(215,81,81);
+      }
+      body {
+        position: relative;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        background: #4DBD33;
+      }
+      html, body {
+        overflow-x: hidden;
+      }
+      div#sky {
+        background: #87CEFA;
+        background: linear-gradient(to bottom, #B0E2FF, #87CEFA);
+        height: 25vh;
+        overflow-x: hidden;
+        text-align: center;
+      }
+      div#grass {
+        background: #8CDD81;
+        background: linear-gradient(to bottom, #8CDD81 20%, #4DBD33 100%);
+        padding: 20px;
+        z-index: 2;
+        position: relative;
+      }
+      div.hills {
+        top: 32vh;
+        left: -12vw;
+        background: #E8E8E8;
+        border-radius: 80vw 80vw 0 0;
+        width: 80vw; height: 40vw;
+        position: absolute;
+        z-index: 1;
+        background: #8CDD81;
+      }
+      div#hill1 {
+        top: 32vh;
+        left: -10vw;
+      }
+      #zeppelin {
+        width: 100px;
+        left: -20vw;
+      }
+      @media (max-width: 800px) {
+        #zeppelin {
+          width: 200px;
+          margin: 0px auto;
+        }
+      }
+      @media (max-width: 350px) {
+        h1 {
+          -webkit-text-stroke-width: 2px;
+          padding-top: .1em;
+          font-size: 40px;
+        }
+      }
+      @media (min-width: 800px) {
+        div#sky {
+          height: 40vh;
+        }
+        h1 {
+          -webkit-text-stroke-width: 3px;
+          padding-top: .1em;
+          font-size: 100px;
+        }
+        #zeppelin {
+          position: absolute;
+          width: 20vw;
+          -webkit-animation: zeppelin 100s linear -20s infinite;
+          animation: zeppelin 100s linear -20s infinite;
+        }
+        @-webkit-keyframes zeppelin {
+          1% { -webkit-transform: translateX(200%); }
+          99% { -webkit-transform: translateX(400%); }
+          100% { -webkit-transform: translateX(600%); }
+        }
+        @keyframes zeppelin {
+          1% { transform: translateX(200%); }
+          99% { transform: translateX(400%); }
+          100% { transform: translateX(600%); }
+        }
+      }
+    </style>
+  </head>
   <body>
-    <h1>Web Animations Demos</h1>
-    <ul>
-      <li><a href="car-demo.html">Car</a></li>
-      <li><a href="curtains.html">Curtains</a></li>
-      <li><a href="test-circle-square.html">Circle Square</a></li>
-      <li><a href="rolio/rolio.html">Rolio</a></li>
-      <li><a href="globe/">Globe</a></li>
-      <li><a href="countries/">Countries</a></li>
-    </ul>
+    <a href="https://github.com/web-animations">
+      <img style="position: absolute; top: 0; left: 0; border: 0; z-index: 4"
+	   src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"
+	   alt="Fork me on GitHub">
+    </a>
+    <div id="sky">
+      <div id="cloud"></div>
+      <h1>Web Animations</h1>
+      <img id="zeppelin" src="zeppelin.svg" alt="Demos">
+    </div>
+    <div id="hill1" class="hills"></div>
+    <div id="grass">
+      <ul>
+	<a class="demo-link" href="car-demo.html"><li>Car</li></a>
+	<a class="demo-link" href="curtains.html"><li>Curtains</li></a>
+	<a class="demo-link" href="test-circle-square.html"><li>Shapes</li></a>
+	<a class="demo-link" href="rolio/rolio.html"><li>Rolio</li></a>
+	<a class="demo-link" href="globe/"><li>Globe</li></a>
+	<a class="demo-link" href="countries/"><li>Countries</li></a>
+      </ul>
+    </div>
   </body>
 </html>
