Revert "refactor demo directory"
This reverts commit 4454f3c9fc7241a188d4d0f046cf5088d5929e01.

--- a/demos/index.html
+++ b/demos/index.html
@@ -165,10 +165,10 @@ limitations under the License.
     <div id="hill1" class="hills"></div>
     <div id="grass">
       <ul>
-	<a class="demo-link" href="car/"><li>Car</li></a>
-	<a class="demo-link" href="curtains/"><li>Curtains</li></a>
-	<a class="demo-link" href="circle-square/"><li>Shapes</li></a>
-	<a class="demo-link" href="rolio/"><li>Rolio</li></a>
+	<a class="demo-link" href="car-demo.html"><li>Car</li></a>
+	<a class="demo-link" href="curtains.html"><li>Curtains</li></a>
+	<a class="demo-link" href="test-circle-square.html"><li>Shapes</li></a>
+	<a class="demo-link" href="rolio/rolio.html"><li>Rolio</li></a>
 	<a class="demo-link" href="globe/"><li>Globe</li></a>
 	<a class="demo-link" href="countries/"><li>Countries</li></a>
       </ul>
