add viewport tag

--- a/demos/index.html
+++ b/demos/index.html
@@ -22,6 +22,7 @@ limitations under the License.
       href='http://fonts.googleapis.com/css?family=Roboto:900italic,400,100'
       rel='stylesheet' type='text/css'>
     <link href='cloud.css' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, user-scalable=false;">
     <style>
       h1, body, ul {
         margin: 0;
@@ -165,12 +166,12 @@ limitations under the License.
     <div id="hill1" class="hills"></div>
     <div id="grass">
       <ul>
-	<a class="demo-link" href="car-demo.html"><li>Car</li></a>
-	<a class="demo-link" href="curtains.html"><li>Curtains</li></a>
-	<a class="demo-link" href="test-circle-square.html"><li>Shapes</li></a>
 	<a class="demo-link" href="rolio/rolio.html"><li>Rolio</li></a>
 	<a class="demo-link" href="globe/"><li>Globe</li></a>
 	<a class="demo-link" href="countries/"><li>Countries</li></a>
+	<a class="demo-link" href="car-demo.html"><li>Car</li></a>
+	<a class="demo-link" href="curtains.html"><li>Curtains</li></a>
+	<a class="demo-link" href="test-circle-square.html"><li>Shapes</li></a>
       </ul>
     </div>
   </body>
