add viewport height

--- a/demos/index.html
+++ b/demos/index.html
@@ -22,7 +22,9 @@ limitations under the License.
       href='http://fonts.googleapis.com/css?family=Roboto:900italic,400,100'
       rel='stylesheet' type='text/css'>
     <link href='cloud.css' rel='stylesheet' type='text/css'>
-    <meta name="viewport" content="width=device-width, user-scalable=false;">
+    <meta name="viewport" content="width=device-width, 
+				   height=device-height,
+				   user-scalable=false;">
     <style>
       h1, body, ul {
         margin: 0;
