Fix test cross browser compatibility

--- a/test/testcases/auto-test-inline-style-methods.html
+++ b/test/testcases/auto-test-inline-style-methods.html
@@ -46,8 +46,8 @@ var target = document.querySelector('#target');
 document.timeline.play(new Animation(target, {left: '100px', composite: 'add'}, {duration: 1, iterations: 2, direction: 'alternate'}));
 
 at(0.5, function() {
-  assert_equals(0, target.style.length);
-  assert_equals(null, target.style.getPropertyValue('left'));
+  assert_equals(target.style.length, 0);
+  assert_in_array(target.style.getPropertyValue('left'), ['', null]);
 });
 
 testharness_timeline.schedule(function() {
@@ -56,8 +56,8 @@ testharness_timeline.schedule(function() {
 }, 1000);
 
 at(1.5, function() {
-  assert_equals(1, target.style.length);
-  assert_equals('50px', target.style.getPropertyValue('left'));
+  assert_equals(target.style.length, 1);
+  assert_equals(target.style.getPropertyValue('left'), '50px');
 });
 
 testharness_timeline.schedule(function() {
@@ -65,9 +65,9 @@ testharness_timeline.schedule(function() {
 }, 2500);
 
 at(3, function() {
-  assert_equals(2, target.style.length);
-  assert_equals('100px', target.style.getPropertyValue('left'));
-  assert_not_equals(null, target.style.getPropertyValue('background-color'));
+  assert_equals(target.style.length, 2);
+  assert_equals(target.style.getPropertyValue('left'), '100px');
+  assert_equals(target.style.getPropertyValue('background-color'), 'green');
 });
 
 </script>
