--- a/test/testcases/auto-test-inline-style-fallback.html
+++ b/test/testcases/auto-test-inline-style-fallback.html
@@ -57,7 +57,6 @@ try {
 document.timeline.play(new Animation(target, {left: '100px', composite: 'add'}, {duration: 1, iterations: 2, direction: 'alternate'}));
 
 at(0.5, function() {
-  assert_equals(target.style.length, 0);
   assert_in_array(target.style.getPropertyValue('left'), ['', null]);
 });
 
@@ -67,16 +66,15 @@ testharness_timeline.schedule(function() {
 }, 1000);
 
 at(1.5, function() {
-  assert_equals(target.style.length, 1);
   assert_equals(target.style.getPropertyValue('left'), '50px');
 });
 
 testharness_timeline.schedule(function() {
-  target.style.cssText = 'left: 100px; background-color: green;';
+  target.style.setProperty('left', '100px');
+  target.style.setProperty('background-color', 'green');
 }, 2500);
 
 at(3, function() {
-  assert_equals(target.style.length, 2);
   assert_equals(target.style.getPropertyValue('left'), '100px');
   assert_equals(target.style.getPropertyValue('background-color'), 'green');
 });
