Added button to player API playground to seek to -1s.

--- a/new-player-api-playground.html
+++ b/new-player-api-playground.html
@@ -107,6 +107,7 @@ var controls = {
     82: {help: 'R: Reverse', action: function() { player.reverse(); }},
     107: {help: '+: Speed up', action: function() { player.playbackRate *= 2; }},
     109: {help: '-: Slow down', action: function() { player.playbackRate /= 2; }},
+    192: {help: '~: Seek to -1s', action: function() { player.currentTime = -1; }},
 }
 
 for (var i in controls) {
